<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/touch_bar"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_music"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/muse1"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/sky_blue"/>
        <TextView
            android:id="@+id/song_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/header"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_porc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/count"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/random"/>
        <TextView
            android:id="@+id/prog"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="-1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/menu1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/songs"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/menu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/favorite"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/menu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>