<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Music_Activity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topbar"
        android:padding="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/songs"
                android:textColor="@color/black"
                android:singleLine="true"
                android:maxEms="12"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/singer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singer"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/song_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/btn_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/download"
            app:srcCompat="@drawable/btn_download"
            android:background="@drawable/btn_bg_selector"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_music"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/color_button"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:max="100"
        android:maxHeight="6.0dip"
        android:minHeight="6.0dip"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:progressDrawable="@drawable/st_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_music"
        app:layout_constraintEnd_toEndOf="parent"
        android:thumb="@color/sky_blue"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="5dp"
        android:id="@+id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/bar_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
        <TextView
            android:id="@+id/bar_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/time"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/controller"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageButton
            android:id="@+id/btn_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/btn_loop"
            tools:ignore="ContentDescription,VectorDrawableCompat"
            android:background="@drawable/btn_bg_selector"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_prev"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/circ"/>
        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/btn_prev"
            app:layout_constraintStart_toEndOf="@id/btn_loop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_porc"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/prev" />

        <ImageButton
            android:id="@+id/btn_porc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            app:srcCompat="@drawable/btn_play"
            app:layout_constraintStart_toEndOf="@id/btn_prev"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            app:srcCompat="@drawable/btn_next"
            app:layout_constraintStart_toEndOf="@id/btn_porc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_shuf"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/next"/>

        <ImageButton
            android:id="@+id/btn_shuf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            app:srcCompat="@drawable/btn_shuf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/shuf"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/count"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/header"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>